Components keeps state and back button added

--- a/Exercise4_1/wwwroot/js/components/posts/posts_view.html
+++ b/Exercise4_1/wwwroot/js/components/posts/posts_view.html
@@ -3,7 +3,7 @@
 <button data-bind="click: search">Search for posts</button>
 <ul data-bind="foreach: posts">
     <li>
-        <h2 data-bind="text: $data.title, click: $parent.getPost"></h2>
+        <a href="#" data-bind="text: $data.title, click: $parent.getPost"></a>
         <!--<button data-bind="click: getPost">Read post</button>-->
     </li>
 </ul>
