--- a/Exercise4_1/wwwroot/js/components/singlePost/single-post_view.html
+++ b/Exercise4_1/wwwroot/js/components/singlePost/single-post_view.html
@@ -1,4 +1,5 @@
 ﻿<h1>Single Post</h1>
+<button data-bind="click: back">back</button>
 <h2 data-bind="text: postTitle"></h2>
 <h3 data-bind="text: creationDate"></h3>
 <b data-bind="text: score"></b>
